--- a/rumbl/lib/rumbl_web/templates/page/index.html.eex
+++ b/rumbl/lib/rumbl_web/templates/page/index.html.eex
@@ -1,4 +1,3 @@
 <section class="phx-hero">
-  <h2><%= gettext "Welcome to %{name}!", name: "Rumbl.io" %></h2>
-  <p>Rumbl out loud.</p>
+<h2><%= gettext "Welcome to %{name}!", name: "Rumbl.io" %></h2> <p>Rumbl out loud.</p>
 </section>
