--- a/rumbl/lib/rumbl_web/templates/user/new.html.eex
+++ b/rumbl/lib/rumbl_web/templates/user/new.html.eex
@@ -1,10 +1,17 @@
 <h2>New User</h2>
 <%= form_for @changeset, Routes.user_path(@conn, :create), fn f -> %> 
+<%= if @changeset.action do %>
+    <div class="alert alert-danger">
+        <p>Oops, somehting went wrong!  Please check the errors below.</p>
+    </div>
+<% end %>
     <div>
         <%= text_input f, :name, placeholder: "Name" %> 
+        <%= error_tag f, :name %>
     </div>
     <div>
-        <%= text_input f, :username, placeholder: "Username" %> 
+        <%= text_input f, :username, placeholder: "Username" %>
+        <%= error_tag f, :username %>
     </div>
     <%= submit "Create User" %>
 <% end %>
